--- a/chat/docker-compose.yml
+++ b/chat/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   django:
     build: ./my_site
+    container_name: django
     command: sh -c "python3 manage.py collectstatic --no-input && daphne -b 0.0.0.0 -p 8000 my_site.asgi:application"
     volumes:
       - ./my_site:/my_site
@@ -12,6 +13,7 @@ services:
       - 8000
     environment:
       - CHANNELS_REDIS_HOST=redis
+  
   nginx:
     image: nginx:1.17-alpine
     depends_on:
@@ -22,6 +24,7 @@ services:
     volumes:
       - static_data:/var/www/html/static
       - ./nginx-conf.d:/etc/nginx/conf.d
+  
   redis:
     image: redis:alpine
     restart: always
